secondfile/objects/DHStatus_Step__c.object
<CustomObject>
    <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Detail-DHStatus-Step</description>
    <fields>
        <fullName>DHStatus_Testing_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Detail-DHStatus-Step-DHStatus-Testing Details</description>
        <label>DHStatus-Testing Details</label>
        <referenceTo>DHStatus_Testing_Details__c</referenceTo>
        <relationshipLabel>DHStatus-Step</relationshipLabel>
        <relationshipName>DHStatus_Step</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Step_Name__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Detail-DHStatus-Step</description>
        <label>Step Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step_Outcome__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Detail-DHStatus-Step</description>
        <label>Step Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step_Time__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details-Testing Details-Detail-DHStatus-Step</description>
        <label>Step Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Step</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>DHStatus-Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Step</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>